--- a/app/src/main/res/layout/fragment_contact.xml
+++ b/app/src/main/res/layout/fragment_contact.xml
@@ -2,201 +2,207 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:padding="16dp">
+   >
 
-    <!-- Nội dung chính của phần liên hệ -->
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:gravity="center_horizontal"
-        android:layout_marginTop="30dp"
-        android:layout_marginBottom="30dp">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+        <include layout="@layout/header_layout_contact" />
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:gravity="center_horizontal"
+            android:layout_marginTop="30dp"
+            android:layout_marginBottom="10dp">
 
-        <!-- Ảnh logo -->
+            <!-- Ảnh logo -->
 
-        <!-- Tên thương hiệu -->
-        <androidx.cardview.widget.CardView
+            <!-- Tên thương hiệu -->
+            <androidx.cardview.widget.CardView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:cardCornerRadius="50dp">
+                <ImageView
+                    android:id="@+id/logo"
+                    android:layout_width="100dp"
+                    android:layout_height="100dp"
+                    android:background="@drawable/radius_image_item"
+                    android:src="@drawable/profile"
+                    />
+            </androidx.cardview.widget.CardView>
+
+            <TextView
+                android:id="@+id/tvName"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Phạm Thành Nam"
+                android:textSize="24sp"
+                android:textStyle="bold"
+                android:textColor="@android:color/holo_red_light"
+                android:layout_marginTop="8dp" />
+
+            <!-- Mô tả -->
+            <TextView
+                android:id="@+id/tvDescription"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+
+                android:textSize="16sp"
+                android:gravity="center"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="20dp" />
+        </LinearLayout>
+
+        <!-- Phần liên hệ dùng GridLayout (hiển thị dạng lưới trong FrameLayout) -->
+        <GridLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            app:cardCornerRadius="50dp">
-            <ImageView
-                android:id="@+id/logo"
-                android:layout_width="100dp"
-                android:layout_height="100dp"
-                android:background="@drawable/radius_image_item"
-                android:src="@drawable/profile"
-                />
-        </androidx.cardview.widget.CardView>
+            android:layout_gravity="center"
+            android:columnCount="3"
+            android:padding="8dp"
 
-        <TextView
-            android:id="@+id/tvName"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Phạm Thành Nam"
-            android:textSize="24sp"
-            android:textStyle="bold"
-            android:textColor="@android:color/holo_red_light"
-            android:layout_marginTop="8dp" />
+            android:layout_marginTop="30dp">
 
-        <!-- Mô tả -->
-        <TextView
-            android:id="@+id/tvDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            <!-- Nút Facebook -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_margin="10dp">
 
-            android:textSize="16sp"
-            android:gravity="center"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="20dp" />
+                <ImageView
+                    android:id="@+id/img_facebook"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/fb" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text="Facebook"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <!-- Nút Call Phone -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_margin="10dp">
+
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="42dp"
+                    android:src="@drawable/callphone" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text="Call Phone"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <!-- Nút Gmail -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_margin="10dp">
+
+                <ImageView
+                    android:id="@+id/img_gmail"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/gmail" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text="Gmail"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <!-- Nút Skype -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_margin="10dp">
+
+                <ImageView
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/skype" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text="Skype"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <!-- Nút Youtube -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_margin="10dp">
+
+                <ImageView
+                    android:id="@+id/image_youtube"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/youtube" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text="Youtube"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+            <!-- Nút Zalo -->
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:orientation="vertical"
+                android:layout_margin="10dp"
+                >
+
+                <ImageView
+                    android:id="@+id/image_zalo"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:src="@drawable/zalo" />
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="4dp"
+                    android:gravity="center"
+                    android:text="Zalo"
+                    android:textSize="14sp" />
+            </LinearLayout>
+
+        </GridLayout>
     </LinearLayout>
-
-    <!-- Phần liên hệ dùng GridLayout (hiển thị dạng lưới trong FrameLayout) -->
-    <GridLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:columnCount="3"
-        android:padding="8dp"
-
-        android:layout_marginTop="30dp">
-
-        <!-- Nút Facebook -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_margin="10dp">
-
-            <ImageView
-                android:id="@+id/img_facebook"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/fb" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="Facebook"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <!-- Nút Call Phone -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_margin="10dp">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="42dp"
-                android:src="@drawable/callphone" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="Call Phone"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <!-- Nút Gmail -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_margin="10dp">
-
-            <ImageView
-                android:id="@+id/img_gmail"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/gmail" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="Gmail"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <!-- Nút Skype -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_margin="10dp">
-
-            <ImageView
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/skype" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="Skype"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <!-- Nút Youtube -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_margin="10dp">
-
-            <ImageView
-                android:id="@+id/image_youtube"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/youtube" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="Youtube"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-        <!-- Nút Zalo -->
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="vertical"
-            android:layout_margin="10dp"
-            >
-
-            <ImageView
-                android:id="@+id/image_zalo"
-                android:layout_width="48dp"
-                android:layout_height="48dp"
-                android:src="@drawable/zalo" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="4dp"
-                android:gravity="center"
-                android:text="Zalo"
-                android:textSize="14sp" />
-        </LinearLayout>
-
-    </GridLayout>
 </FrameLayout>
