--- a/app/src/main/res/layout/fragment_feed_back.xml
+++ b/app/src/main/res/layout/fragment_feed_back.xml
@@ -5,102 +5,105 @@
     android:layout_height="match_parent"
     tools:context=".user.FeedBackFragment">
 
-    <LinearLayout
+    <ScrollView
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
+        android:layout_height="match_parent">
 
-        <TextView
-            android:id="@+id/textView4"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Họ Và Tên(*)"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            android:orientation="vertical">
 
-        <EditText
-            android:id="@+id/enter_hoten"
-            android:layout_width="match_parent"
-            android:layout_height="30dp"
+            <include layout="@layout/header_layout_feedback" />
+
+            <TextView
+                android:id="@+id/textView4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="Họ Và Tên(*)"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+            <EditText
+                android:id="@+id/enter_hoten"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
             android:layout_margin="10dp"
             android:background="@drawable/eddit_text_no_underline"
             android:inputType="text"
             android:padding="5dp" />
 
-        <TextView
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="Số điện thoại"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-            android:id="@+id/textView5"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Số điện thoại"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <EditText
+                android:id="@+id/enter_sđt"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/eddit_text_no_underline"
+                android:ems="10"
+                android:inputType="number"
+                android:padding="5dp" />
 
-        <EditText
-            android:id="@+id/enter_sđt"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/eddit_text_no_underline"
-            android:ems="10"
-            android:inputType="number"
-            android:padding="5dp" />
+            <TextView
+                android:id="@+id/textView6"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="Email"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView6"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Email"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <EditText
+                android:id="@+id/enter_email"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/eddit_text_no_underline"
+                android:inputType="textEmailAddress"
+                android:padding="5dp"
+                android:enabled="false"/>
 
-        <EditText
-            android:id="@+id/enter_email"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/eddit_text_no_underline"
-            android:inputType="textEmailAddress"
-            android:padding="5dp"
-            android:enabled="false"/>
+            <TextView
+                android:id="@+id/textView7"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="10dp"
+                android:text="Bình Luận(*)"
+                android:textSize="20sp"
+                android:textStyle="bold" />
 
-        <TextView
-            android:id="@+id/textView7"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginLeft="10dp"
-            android:text="Bình Luận(*)"
-            android:textSize="20sp"
-            android:textStyle="bold" />
+            <EditText
+                android:id="@+id/enter_comment"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:background="@drawable/eddit_text_no_underline"
+                android:ems="10"
+                android:inputType="textMultiLine"
+                android:gravity="top|start"
+                android:lines="5"
+                android:padding="5dp" />
 
-        <EditText
-            android:id="@+id/enter_comment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="10dp"
-            android:background="@drawable/eddit_text_no_underline"
-            android:ems="10"
-            android:inputType="textMultiLine"
-            android:gravity="top|start"
-            android:lines="5"
-            android:padding="5dp"
-            />
-
-        <Button
-            android:id="@+id/enter_feedback"
-            android:layout_width="200dp"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center"
-            android:layout_marginTop="50dp"
-            android:backgroundTint="#F4511E"
-            android:text="Gửi Phản Hồi"
-            android:textColor="@color/white"
-            android:textColorLink="#F4511E"
-            android:textStyle="bold"
-
-            />
-    </LinearLayout>
+            <Button
+                android:id="@+id/enter_feedback"
+                android:layout_width="200dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="50dp"
+                android:backgroundTint="#F4511E"
+                android:text="Gửi Phản Hồi"
+                android:textColor="@color/white"
+                android:textColorLink="#F4511E"
+                android:textStyle="bold" />
+        </LinearLayout>
+    </ScrollView>
 </FrameLayout>
