--- a/app/src/main/res/layout/fragment_order_admin.xml
+++ b/app/src/main/res/layout/fragment_order_admin.xml
@@ -5,10 +5,11 @@
     android:layout_height="match_parent"
     tools:context=".admin.OrderAdminFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycle_order_item"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:padding="16dp"
+    android:clipToPadding="false" />
 
 </FrameLayout>
