--- a/app/src/main/res/layout/item_cart.xml
+++ b/app/src/main/res/layout/item_cart.xml
@@ -19,7 +19,7 @@
         />
 
     <LinearLayout
-        android:layout_width="wrap_content"
+        android:layout_width="150dp"
         android:layout_height="wrap_content"
         android:orientation="vertical"
        >
@@ -71,8 +71,10 @@
         android:id="@+id/btn_delete_item"
         android:layout_width="80dp"
         android:layout_height="50dp"
+
         android:layout_gravity="center"
-        android:layout_marginStart="50dp"
+
+        android:layout_marginStart="10dp"
         android:background="#F4511E"
         android:backgroundTint="#F4511E"
         android:text="@string/btn_delete"
