--- a/app/src/main/res/layout/activity_food_detail.xml
+++ b/app/src/main/res/layout/activity_food_detail.xml
@@ -6,11 +6,25 @@
     android:orientation="vertical"
     android:padding="16dp">
 
-    <ImageView
-        android:id="@+id/image_ic_back"
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_backactivity" />
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/image_ic_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:srcCompat="@drawable/ic_backactivity"
+            android:layout_marginRight="275dp"
+            />
+
+        <ImageView
+            android:id="@+id/img_cart"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            app:srcCompat="@drawable/ic_cart" />
+    </LinearLayout>
 
     <ImageView
         android:id="@+id/product_image"
