--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -89,7 +89,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="172dp"
         android:layout_marginEnd="96dp"
-        android:text="@string/txt_register"
+        android:text="@string/txtdangnhap"
         android:textColor="#FB8C00"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
