--- a/app/src/main/res/layout/layout_item_history_user.xml
+++ b/app/src/main/res/layout/layout_item_history_user.xml
@@ -165,6 +165,13 @@
                     android:text="Tổng tiền"
                     android:textColor="#F4511E"
                     android:textSize="14sp" />
+
+                <TextView
+                    android:id="@+id/textView12"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="VND" />
             </LinearLayout>
 
             <LinearLayout
