--- a/app/src/main/res/layout/fragment_profile_admin.xml
+++ b/app/src/main/res/layout/fragment_profile_admin.xml
@@ -22,14 +22,14 @@
             android:src="@drawable/ic_account_profile" />
 
         <TextView
+            android:id="@+id/txt_admin_show"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="20dp"
             android:text="Thanhnamnb@gmail.com"
             android:textSize="20dp"
-            android:textStyle="bold"
 
-            />
+            android:textStyle="bold" />
 
         <LinearLayout
             android:layout_width="match_parent"
