--- a/app/src/main/res/layout/header_layout_cart.xml
+++ b/app/src/main/res/layout/header_layout_cart.xml
@@ -11,9 +11,7 @@
         android:id="@+id/header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Cart"
+        android:text="Giỏ Hàng"
         android:textSize="24sp"
         android:textColor="@android:color/white" />
-
-
 </LinearLayout>
