--- a/app/src/main/res/layout/header_layout_feedback.xml
+++ b/app/src/main/res/layout/header_layout_feedback.xml
@@ -7,13 +7,13 @@
     android:padding="12dp">
 
     <TextView
-        android:layout_gravity="center"
         android:id="@+id/header_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="FeedBack"
-        android:textSize="24sp"
-        android:textColor="@android:color/white" />
+        android:layout_gravity="center"
+        android:text="Phản Hồi"
+        android:textColor="@android:color/white"
+        android:textSize="24sp" />
 
 
 </LinearLayout>
