--- a/app/src/main/res/layout/item_feed_back.xml
+++ b/app/src/main/res/layout/item_feed_back.xml
@@ -10,8 +10,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         app:cardBackgroundColor="@color/grey"
-        app:cardCornerRadius="12dp"
-        >
+        app:cardCornerRadius="12dp">
 
         <LinearLayout
 
@@ -20,17 +19,44 @@
             android:orientation="vertical"
             android:padding="12dp">
 
-            <TextView
-                android:id="@+id/tvHoTen"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Họ tên" />
+                android:orientation="horizontal">
 
-            <TextView
-                android:id="@+id/tvSdt"
+                <TextView
+                    android:id="@+id/textView13"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Họ Tên Khách Hàng: "
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvHoTen"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Họ tên" />
+            </LinearLayout>
+
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Số điện thoại" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView14"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Số Điện Thoại: "
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvSdt"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Số điện thoại" />
+            </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
@@ -52,12 +78,26 @@
                     android:textStyle="bold" />
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/tvBinhLuan"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Bình luận"
-                android:textStyle="bold|italic" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/textView15"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Phản Hồi :"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/tvBinhLuan"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Bình luận"
+                    android:textStyle="bold|italic" />
+            </LinearLayout>
+
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
